--- a/index.html
+++ b/index.html
@@ -1,212 +1,152 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | My project</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-      <div id="unity-container" class="unity-desktop">
-          <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-          <div id="unity-loading-bar">
-              <div id="unity-logo"></div>
-              <div id="unity-progress-bar-empty">
-                  <div id="unity-progress-bar-full"></div>
-              </div>
-          </div>
-          <div id="unity-warning"> </div>
-          <div id="unity-footer">
-              <div id="unity-webgl-logo"></div>
-              <div id="unity-fullscreen-button"></div>
-              <div id="unity-build-title">My project</div>
-          </div>
-      </div>
-      <script>
+</head>
+<body>
+    <div id="unity-container" class="unity-desktop">
+        <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+        <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <div id="unity-progress-bar-empty">
+                <div id="unity-progress-bar-full"></div>
+            </div>
+        </div>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+            <div id="unity-webgl-logo"></div>
+            <div id="unity-fullscreen-button"></div>
+            <div id="unity-build-title">My project</div>
+        </div>
+    </div>
+    <script>
 
-          var container = document.querySelector("#unity-container");
-          var canvas = document.querySelector("#unity-canvas");
-          var loadingBar = document.querySelector("#unity-loading-bar");
-          var progressBarFull = document.querySelector("#unity-progress-bar-full");
-          var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-          var warningBanner = document.querySelector("#unity-warning");
+        var container = document.querySelector("#unity-container");
+        var canvas = document.querySelector("#unity-canvas");
+        var loadingBar = document.querySelector("#unity-loading-bar");
+        var progressBarFull = document.querySelector("#unity-progress-bar-full");
+        var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+        var warningBanner = document.querySelector("#unity-warning");
 
-          // Shows a temporary message banner/ribbon for a few seconds, or
-          // a permanent error message on top of the canvas if type=='error'.
-          // If type=='warning', a yellow highlight color is used.
-          // Modify or remove this function to customize the visually presented
-          // way that non-critical warnings and error messages are presented to the
-          // user.
-          function unityShowBanner(msg, type) {
-              function updateBannerVisibility() {
-                  warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-              }
-              var div = document.createElement('div');
-              div.innerHTML = msg;
-              warningBanner.appendChild(div);
-              if (type == 'error') div.style = 'background: red; padding: 10px;';
-              else {
-                  if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-                  setTimeout(function () {
-                      warningBanner.removeChild(div);
-                      updateBannerVisibility();
-                  }, 5000);
-              }
-              updateBannerVisibility();
-          }
+        function unityShowBanner(msg, type) {
+            function updateBannerVisibility() {
+                warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+            }
+            var div = document.createElement('div');
+            div.innerHTML = msg;
+            warningBanner.appendChild(div);
+            if (type == 'error') div.style = 'background: red; padding: 10px;';
+            else {
+                if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+                setTimeout(function () {
+                    warningBanner.removeChild(div);
+                    updateBannerVisibility();
+                }, 5000);
+            }
+            updateBannerVisibility();
+        }
 
-          var buildUrl = "Build";
-          var loaderUrl = buildUrl + "/TelegrammTestGame.loader.js";
-          var config = {
-              dataUrl: buildUrl + "/TelegrammTestGame.data",
-              frameworkUrl: buildUrl + "/TelegrammTestGame.framework.js",
-              codeUrl: buildUrl + "/TelegrammTestGame.wasm",
-              streamingAssetsUrl: "StreamingAssets",
-              companyName: "DefaultCompany",
-              productName: "My project",
-              productVersion: "1.0",
-              showBanner: unityShowBanner,
-          };
+        var buildUrl = "Build";
+        var loaderUrl = buildUrl + "/TelegrammTestGame.loader.js";
+        var config = {
+            dataUrl: buildUrl + "/TelegrammTestGame.data",
+            frameworkUrl: buildUrl + "/TelegrammTestGame.framework.js",
+            codeUrl: buildUrl + "/TelegrammTestGame.wasm",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "DefaultCompany",
+            productName: "My project",
+            productVersion: "1.0",
+            showBanner: unityShowBanner,
+        };
 
-          // By default, Unity keeps WebGL canvas render target size matched with
-          // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-          // Set this to false if you want to decouple this synchronization from
-          // happening inside the engine, and you would instead like to size up
-          // the canvas DOM size and WebGL render target sizes yourself.
-          // config.matchWebGLToCanvasSize = false;
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+            var meta = document.createElement('meta');
+            meta.name = 'viewport';
+            meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+            document.getElementsByTagName('head')[0].appendChild(meta);
+            container.className = "unity-mobile";
+            canvas.className = "unity-mobile";
+        } else {
+            canvas.style.width = "960px";
+            canvas.style.height = "600px";
+        }
 
-          if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-              // Mobile device style: fill the whole browser client area with the game canvas:
+        loadingBar.style.display = "block";
 
-              var meta = document.createElement('meta');
-              meta.name = 'viewport';
-              meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-              document.getElementsByTagName('head')[0].appendChild(meta);
-              container.className = "unity-mobile";
-              canvas.className = "unity-mobile";
+        var script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
+            createUnityInstance(canvas, config, (progress) => {
+                progressBarFull.style.width = 100 * progress + "%";
+            }).then((unityInstance) => {
+                loadingBar.style.display = "none";
+                fullscreenButton.onclick = () => {
+                    unityInstance.SetFullscreen(1);
+                };
+            }).catch((message) => {
+                alert(message);
+            });
+        };
 
-              // To lower canvas resolution on mobile devices to gain some
-              // performance, uncomment the following line:
-              // config.devicePixelRatio = 1;
+        document.body.appendChild(script);
 
+    </script>
 
-          } else {
-              // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+    <!-- Telegram Login Widget -->
+    <script async src="https://telegram.org/js/telegram-widget.js?15"
+            data-telegram-login="UnityTGTest"
+            data-size="large"
+            data-auth-url=""
+            data-request-access="write"
+            onAuthCallback="onTelegramAuth(user)"></script>
 
-              canvas.style.width = "960px";
-              canvas.style.height = "600px";
-          }
+    <script type="text/javascript">
+        function onTelegramAuth(user) {
+            // Преобразуем объект пользователя в строку JSON
+            const jsonUser = JSON.stringify(user);
+            // Отправляем данные в Unity через SendMessage
+            SendMessage('GameManager', 'ReceiveTelegramData', jsonUser);
+        }
 
-          loadingBar.style.display = "block";
+        // Функция, вызываемая Unity для отправки счёта на сервер
+        function submitScoreToServer(score) {
+            const user = window.Telegram.WebApp.initDataUnsafe;
 
-          var script = document.createElement("script");
-          script.src = loaderUrl;
-          script.onload = () => {
-              createUnityInstance(canvas, config, (progress) => {
-                  progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                  loadingBar.style.display = "none";
-                  fullscreenButton.onclick = () => {
-                      unityInstance.SetFullscreen(1);
-                  };
-              }).catch((message) => {
-                  alert(message);
-              });
-          };
+            if (user) {
+                const authData = {
+                    id: user.id,
+                    username: user.username,
+                    hash: user.hash,
+                    score: score
+                };
 
-          document.body.appendChild(script);
-
-      </script>
-
-      <!-- Telegram Login Widget -->
-      <script async src="https://telegram.org/js/telegram-widget.js?15"
-              data-telegram-login="UnityTGTest"
-              data-size="large"
-              data-auth-url="http://192.168.0.2:5000/auth"
-              data-request-access="write"
-              onAuth="onTelegramAuth"></script>
-
-      <script type="text/javascript">
-          function onTelegramAuth(user) {
-              console.log('Авторизация через Telegram: ', user);
-
-              // Формируем данные для отправки на сервер
-              const authData = {
-                  id: user.id,
-                  username: user.username,
-                  hash: user.hash
-              };
-
-              // Отправляем данные на сервер для проверки
-              fetch('http://192.168.0.2:5000/auth', {
-                  method: 'POST',
-                  headers: {
-                      'Content-Type': 'application/json'
-                  },
-                  body: JSON.stringify(authData)
-              })
-                  .then(response => response.json())
-                  .then(data => {
-                      if (data.valid) {
-                          // Если сервер подтвердил данные, передаем их в Unity
-                          const userData = {
-                              user_id: data.user_id,
-                              username: data.username,
-                              score: data.score
-                          };
-                          UnityInstance.SendMessage('ApiClient', 'OnUserAuthorized', JSON.stringify(userData));
-                      } else {
-                          // Если авторизация не удалась, сворачиваем приложение
-                          alert('Ошибка авторизации. Приложение будет закрыто.');
-                          window.close();  // Закрываем окно
-                      }
-                  })
-                  .catch(error => {
-                      console.error('Ошибка при авторизации на сервере:', error);
-                      alert('Ошибка авторизации. Приложение будет закрыто.');
-                      window.close();  // Закрываем окно
-                  });
-          }
-
-          // Функция, вызываемая Unity для отправки счёта на сервер
-          function submitScoreToServer(score) {
-              // Получаем данные от Telegram Login Widget
-              const user = window.Telegram.WebApp.initDataUnsafe;
-
-              if (user) {
-                  // Формируем объект данных для отправки
-                  const authData = {
-                      id: user.id,
-                      username: user.username,
-                      hash: user.hash,
-                      score: score // передаем счёт, полученный из Unity
-                  };
-
-                  // Отправляем данные на сервер
-                  fetch('http://192.168.0.2:5000/submit-score', {
-                      method: 'POST',
-                      headers: {
-                          'Content-Type': 'application/json'
-                      },
-                      body: JSON.stringify(authData)
-                  })
-                      .then(response => response.json())
-                      .then(data => {
-                          if (data.valid) {
-                              console.log('Счёт успешно отправлен и проверен.');
-                          } else {
-                              alert('Ошибка авторизации.');
-                              window.close();  // Закрываем приложение, если ошибка
-                          }
-                      })
-                      .catch(error => {
-                          console.error('Ошибка при отправке на сервер:', error);
-                      });
-              } else {
-                  console.error('Ошибка: пользователь не авторизован через Telegram.');
-              }
-          }
-      </script>
-  </body>
+                fetch('http://192.168.0.2:5000/submit-score', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(authData)
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.valid) {
+                            console.log('Счёт успешно отправлен и проверен.');
+                        } else {
+                            alert('Ошибка авторизации.');
+                            window.close();
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Ошибка при отправке на сервер:', error);
+                    });
+            } else {
+                console.error('Ошибка: пользователь не авторизован через Telegram.');
+            }
+        }
+    </script>
+</body>
 </html>
